--- a/app/src/main/res/layout/full_name_signup_fragment.xml
+++ b/app/src/main/res/layout/full_name_signup_fragment.xml
@@ -16,7 +16,7 @@
         android:background="@drawable/back_btn"
         android:elevation="12dp"
         android:padding="13dp"
-        android:src="@drawable/back_arrow" />
+        android:src="@drawable/ic_back_arrow" />
 
 
     <LinearLayout
@@ -64,7 +64,7 @@
                     android:id="@+id/first_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/edt_bg_selector"
+                    android:background="@drawable/bg_et_selector"
                     android:cursorVisible="true"
                     android:hint="@string/your_name"
                     android:nextFocusDown="@+id/last_name"
@@ -73,7 +73,7 @@
                     android:singleLine="true"
                     android:textColor="@android:color/black"
                     android:textColorHint="#60000000"
-                    android:textCursorDrawable="@drawable/color_cursor"
+                    android:textCursorDrawable="@drawable/bg_color_cursor"
                     android:textSize="16sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -90,7 +90,7 @@
                     android:id="@+id/last_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/edt_bg_selector"
+                    android:background="@drawable/bg_et_selector"
                     android:cursorVisible="true"
                     android:hint="@string/your_family"
                     android:paddingStart="0dp"
@@ -98,7 +98,7 @@
                     android:singleLine="true"
                     android:textColor="@android:color/black"
                     android:textColorHint="#60000000"
-                    android:textCursorDrawable="@drawable/color_cursor"
+                    android:textCursorDrawable="@drawable/bg_color_cursor"
                     android:textSize="16sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -123,7 +123,7 @@
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="20dp"
             android:layout_marginTop="14dp"
-            android:background="@drawable/btn_style_gray"
+            android:background="@drawable/bg_btn_gray"
             android:fontFamily="@font/roboto"
             android:text="@string/next"
             android:textAllCaps="false"
