--- a/app/src/main/res/layout/detail_ride_layout.xml
+++ b/app/src/main/res/layout/detail_ride_layout.xml
@@ -334,11 +334,11 @@
                     android:id="@+id/comment_back_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:gravity="start"
                     android:paddingStart="15dp"
-                    android:paddingBottom="15dp"
                     android:paddingTop="15dp"
                     android:paddingEnd="50dp"
-                    android:gravity="start"
+                    android:paddingBottom="15dp"
                     android:src="@drawable/ic_arrow_left" />
 
 
@@ -362,9 +362,9 @@
                 android:id="@+id/comment_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="15dp"
                 android:layout_marginTop="20dp"
                 android:background="@null"
-                android:layout_margin="15dp"
                 android:hint="@string/commentForDriver"
                 android:inputType="textMultiLine"
                 android:textColor="@android:color/black"
@@ -377,7 +377,7 @@
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <View
-        android:id="@+id/on_map_view"
+        android:id="@+id/on_map_view_detail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:alpha="0"
