--- a/app/src/main/res/layout/get_driver_fragment.xml
+++ b/app/src/main/res/layout/get_driver_fragment.xml
@@ -269,10 +269,15 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:background="@null"
+                        android:ellipsize="marquee"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
                         android:fontFamily="@font/roboto"
                         android:gravity="start|center"
                         android:padding="5dp"
                         android:paddingStart="0dp"
+                        android:scrollHorizontally="true"
+                        android:singleLine="true"
                         android:textColor="@android:color/black"
                         android:textSize="16sp" />
 
@@ -283,13 +288,13 @@
                     android:id="@+id/address_map_marker_btn"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
+                    android:layout_marginStart="15dp"
                     android:layout_marginTop="14dp"
+                    android:layout_marginEnd="15dp"
                     android:background="@drawable/btn_style_black"
                     android:fontFamily="@font/roboto"
                     android:shadowColor="@color/colorBlue"
                     android:text="@string/ready"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginEnd="15dp"
                     android:textAllCaps="false"
                     android:textSize="16sp" />
 
