complete backend-signup-work fix offerPrice length price fix timer retry send sms

--- a/app/src/main/res/layout/full_name_signup_fragment.xml
+++ b/app/src/main/res/layout/full_name_signup_fragment.xml
@@ -116,7 +116,7 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/next"
+            android:id="@+id/next_btn_name"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="15dp"
