--- a/app/src/main/res/layout/offer_price_activity.xml
+++ b/app/src/main/res/layout/offer_price_activity.xml
@@ -44,6 +44,7 @@
                 android:cursorVisible="true"
                 android:hint="100"
                 android:inputType="number"
+                android:maxLength="6"
                 android:nextFocusDown="@+id/last_name"
                 android:paddingStart="0dp"
                 android:paddingEnd="0dp"
