--- a/app/src/main/res/layout/confirm_phone_fragment.xml
+++ b/app/src/main/res/layout/confirm_phone_fragment.xml
@@ -37,6 +37,7 @@
             android:textSize="24sp" />
 
         <TextView
+            android:id="@+id/show_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -51,14 +52,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:orientation="horizontal"
-            android:weightSum="8">
+            android:weightSum="4">
 
             <bonch.dev.view.EditTextCode
                 android:id="@+id/code1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
-                android:layout_weight="2"
+                android:layout_weight="1"
                 android:background="@drawable/bg_et_selector"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
@@ -75,7 +76,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
-                android:layout_weight="2"
+                android:layout_weight="1"
                 android:background="@drawable/bg_et_selector"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
@@ -92,7 +93,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_weight="2"
+                android:layout_weight="1"
                 android:background="@drawable/bg_et_selector"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
@@ -109,7 +110,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_weight="2"
+                android:layout_weight="1"
                 android:background="@drawable/bg_et_selector"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
@@ -151,7 +152,7 @@
             android:textColor="#50000000" />
 
         <Button
-            android:id="@+id/next"
+            android:id="@+id/next_btn_code"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="15dp"
