--- a/app/src/main/res/layout/phone_signup_fragment.xml
+++ b/app/src/main/res/layout/phone_signup_fragment.xml
@@ -91,7 +91,7 @@
             android:textSize="12sp" />
 
         <Button
-            android:id="@+id/next"
+            android:id="@+id/next_btn_phone"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="15dp"
