--- a/app/src/main/res/layout/get_driver_layout.xml
+++ b/app/src/main/res/layout/get_driver_layout.xml
@@ -25,6 +25,7 @@
         android:id="@+id/center_position"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
         android:layout_gravity="center"
         android:src="@drawable/ic_map_marker" />
 
